add initial model and API client and frontend template

--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -1,19 +1,11 @@
 [package]
 name = "frontend"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.6", features = ["web"] }
-
-[profile]
-
-[profile.wasm-dev]
-inherits = "dev"
-opt-level = 1
-
-[profile.server-dev]
-inherits = "dev"
-
-[profile.android-dev]
-inherits = "dev"
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+gloo-timers = { version = "0.3", features = ["futures"] }
