--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -9,3 +9,4 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 gloo-timers = { version = "0.3", features = ["futures"] }
+wasm-bindgen = "=0.2.97"
