--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,5 @@ reqwest = { version = "0.11", features = ["json"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
+bcrypt = "0.15"
+uuid = { version = "1", features = ["v4", "serde"] }
