--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -10,3 +10,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 gloo-timers = { version = "0.3", features = ["futures"] }
 wasm-bindgen = "=0.2.97"
+chrono = "0.4"
+web-sys = { version = "0.3", features = ["console"] }
